--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -9,14 +9,14 @@
     "editor.renderIndentGuides": true,
     "editor.tabSize": 2,
     "editor.insertSpaces": true,
-    // "files.autoSave": "onWindowChange",
+    "files.autoSave": "off",
     "git.enableSmartCommit": true,
     "explorer.confirmDelete": false,
     "explorer.sortOrder": "type",
     "explorer.autoReveal": true,
     "workbench.editor.enablePreview": false,
     "git.confirmSync": false,
-    "typescript.updateImportsOnFileMove.enabled": "always",
+    "typescript.updateImportsOnFileMove.enabled": "never",
     "multiCommand.commands": [
         {
             "command": "multiCommand.toggleCommentAndDown",
@@ -36,11 +36,8 @@
     "workbench.iconTheme": "material-icon-theme",
     "material-icon-theme.folders.theme": "classic",
     "editor.minimap.enabled": false,
-    "typescript.preferences.importModuleSpecifier": "relative",
+    "typescript.preferences.importModuleSpecifier": "auto",
     "typescriptHero.imports.organizeOnSave": true,
-    "vscodeWorkspaceSwitcher.paths": [
-        "~/.vscode/workspaces"
-    ],
     "workbench.startupEditor": "newUntitledFile",
     "cSpell.ignorePaths": [
         "**/package-lock.json",
@@ -57,43 +54,59 @@
         "Angulartics",
         "Coinbase",
         "Crafing",
+        "Cusum",
+        "Datasets",
         "Dropdown",
         "Geocode",
         "Geocoding",
         "Injectable",
         "LEADERBOARD",
+        "LSTM",
         "Microservice",
         "Participations",
         "Promisify",
+        "RMSE",
         "Recaptcha",
         "SMTP",
         "SORTINGS",
+        "Setpoint",
         "Superlike",
         "TOASTR",
+        "Topbar",
         "Transcoder",
         "Typegoose",
         "Validators",
         "Vuforia",
+        "Waypoints",
+        "Webapp",
         "blockchain",
         "braintree",
         "bson",
+        "denormalize",
         "dimen",
+        "downsample",
         "firestore",
+        "gatewaycalms",
         "gdpr",
         "ipstack",
+        "keras",
         "metatype",
+        "microservices",
         "mimetype",
         "nestjs",
+        "numpy",
         "petrolium",
         "postgres",
         "postgresql",
         "preheader",
         "qrcode",
         "repo",
+        "sklearn",
         "striptags",
         "sublocality",
         "tesselate",
         "tesselated",
+        "titlecase",
         "totp",
         "unpublish",
         "webhook",
@@ -130,17 +143,36 @@
     ],
     "vetur.completion.autoImport": true,
     "vetur.format.defaultFormatter.js": "prettier",
-    "workbench.activityBar.visible": false,
-    "search.location": "sidebar",
+    "workbench.activityBar.visible": true,
     "liveServer.settings.donotVerifyTags": true,
     "liveServer.settings.donotShowInfoMsg": true,
     "gitlens.blame.highlight.enabled": false,
     "gitlens.blame.heatmap.enabled": false,
     "go.gopath": "/home/aljaz/go",
     "python.jediEnabled": false,
-    "update.channel": "none",
+    "update.mode": "start",
     "window.titleBarStyle": "native",
     "C_Cpp.default.intelliSenseMode": "gcc-x64",
     "C_Cpp.default.cStandard": "c11",
-    "C_Cpp.clang_format_path": "/usr/bin/clang-format"
+    "C_Cpp.clang_format_path": "/usr/bin/clang-format",
+    "files.associations": {
+        "*.mustache": "mustache"
+    },
+    "[mustache]": {
+        
+    },
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    },
+    "extensions.ignoreRecommendations": false,
+    "git.autofetch": true,
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "diffEditor.ignoreTrimWhitespace": false,
+    "[xml]": {
+        "editor.defaultFormatter": "redhat.vscode-xml"
+    },
+    "gitlens.keymap": "none"
 }
