--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -36,7 +36,6 @@
     "workbench.iconTheme": "material-icon-theme",
     "material-icon-theme.folders.theme": "classic",
     "editor.minimap.enabled": false,
-    "typescript.preferences.importModuleSpecifier": "relative",
     "typescriptHero.imports.organizeOnSave": true,
     "vscodeWorkspaceSwitcher.paths": [
         "~/.vscode/workspaces"
@@ -54,15 +53,21 @@
     ],
     "cSpell.language": "en",
     "cSpell.userWords": [
+        "ALUMINIUM",
         "Angulartics",
         "Coinbase",
         "Crafing",
+        "Cusum",
+        "Datasets",
         "Dropdown",
         "Geocode",
         "Geocoding",
         "Injectable",
+        "Kairos",
         "LEADERBOARD",
         "Microservice",
+        "Millis",
+        "PNPU",
         "Participations",
         "Promisify",
         "Recaptcha",
@@ -78,9 +83,11 @@
         "braintree",
         "bson",
         "dimen",
+        "downsample",
         "firestore",
         "gdpr",
         "ipstack",
+        "klass",
         "metatype",
         "mimetype",
         "nestjs",
@@ -94,6 +101,7 @@
         "sublocality",
         "tesselate",
         "tesselated",
+        "topbar",
         "totp",
         "unpublish",
         "webhook",
@@ -131,7 +139,6 @@
     "vetur.completion.autoImport": true,
     "vetur.format.defaultFormatter.js": "prettier",
     "workbench.activityBar.visible": false,
-    "search.location": "sidebar",
     "liveServer.settings.donotVerifyTags": true,
     "liveServer.settings.donotShowInfoMsg": true,
     "gitlens.blame.highlight.enabled": false,
@@ -142,5 +149,15 @@
     "window.titleBarStyle": "native",
     "C_Cpp.default.intelliSenseMode": "gcc-x64",
     "C_Cpp.default.cStandard": "c11",
-    "C_Cpp.clang_format_path": "/usr/bin/clang-format"
+    "C_Cpp.clang_format_path": "/usr/bin/clang-format",
+    "git.autofetch": true,
+    "diffEditor.ignoreTrimWhitespace": true,
+    "javascript.updateImportsOnFileMove.enabled": "always",
+    "git.rebaseWhenSync": true,
+    "[xml]": {
+        "editor.defaultFormatter": "redhat.vscode-xml"
+    },
+    "todo-tree.tree.showScanModeButton": false,
+    "todohighlight.isEnable": false,
+    "gitlens.keymap": "none"
 }
