monaco, sublime & vscode

--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,7 +1,5 @@
 {
-    "window.menuBarVisibility": "hidden",
     "window.enableMenuBarMnemonics": false,
-    "window.zoomLevel": 0,
     "editor.fontSize": 15,
     "editor.fontFamily": "'Monaco', 'monospace', monospace, 'Droid Sans Fallback'",
     "editor.cursorStyle": "line",
@@ -14,7 +12,6 @@
     "explorer.confirmDelete": false,
     "explorer.sortOrder": "type",
     "explorer.autoReveal": true,
-    "workbench.editor.enablePreview": false,
     "git.confirmSync": false,
     "typescript.updateImportsOnFileMove.enabled": "never",
     "multiCommand.commands": [
@@ -36,8 +33,6 @@
     "workbench.iconTheme": "material-icon-theme",
     "material-icon-theme.folders.theme": "classic",
     "editor.minimap.enabled": false,
-    "typescript.preferences.importModuleSpecifier": "auto",
-    "typescriptHero.imports.organizeOnSave": true,
     "workbench.startupEditor": "newUntitledFile",
     "cSpell.ignorePaths": [
         "**/package-lock.json",
@@ -89,40 +84,88 @@
         "bson",
         "caems",
         "denormalize",
+        "blockchain",
+        "braintree",
+        "bson",
+        "Coinbase",
+        "configurator",
+        "convolutional",
+        "Crafing",
+        "Cusum",
+        "Datasets",
+        "derivates",
         "deserialization",
         "dimen",
+        "Discretization",
+        "discretize",
+        "discretized",
         "downsample",
+        "Dropdown",
         "firestore",
         "gatewaycalms",
         "gdpr",
+        "Geocode",
+        "Geocoding",
+        "heatmap",
+        "homeserver",
+        "hostnames",
+        "Injectable",
         "ipstack",
         "keras",
+        "Kairos",
         "klass",
+        "LEADERBOARD",
         "metatype",
         "microservices",
         "mimetype",
         "mqtt",
         "nestjs",
         "numpy",
+        "Microservice",
+        "Millis",
+        "mimetype",
+        "Modbus",
+        "multinomial",
+        "nestjs",
+        "overfit",
+        "overfitting",
+        "parallelization",
+        "Participations",
         "petrolium",
+        "PNPU",
         "postgres",
         "postgresql",
         "preheader",
+        "Promisify",
         "qrcode",
+        "Recaptcha",
+        "redetection",
         "repo",
         "sklearn",
+        "serializable",
+        "SMTP",
+        "SORTINGS",
         "striptags",
         "sublocality",
+        "Superlike",
+        "suspisusily",
         "tesselate",
         "tesselated",
         "titlecase",
+        "timestore",
+        "TOASTR",
         "topbar",
         "totp",
+        "Transcoder",
+        "Typegoose",
         "unpublish",
+        "upserted",
+        "Validators",
+        "Vuforia",
         "webhook",
         "zipcode"
     ],
-    "cSpell.enabledLanguageIds": [
+    "cSpell.enableFiletypes": [
         "asciidoc",
         "c",
         "cpp",
@@ -151,17 +194,12 @@
         "typescriptreact",
         "yml"
     ],
-    "vetur.completion.autoImport": true,
-    "vetur.format.defaultFormatter.js": "prettier",
-    "workbench.activityBar.visible": false,
+    "workbench.activityBar.visible": true,
     "liveServer.settings.donotVerifyTags": true,
     "liveServer.settings.donotShowInfoMsg": true,
     "gitlens.blame.highlight.enabled": false,
     "gitlens.blame.heatmap.enabled": false,
-    "go.gopath": "/home/aljaz/go",
     "python.jediEnabled": false,
-    "update.mode": "start",
-    "window.titleBarStyle": "native",
     "C_Cpp.default.intelliSenseMode": "gcc-x64",
     "C_Cpp.default.cStandard": "c11",
     "C_Cpp.clang_format_path": "/usr/bin/clang-format",
@@ -177,6 +215,10 @@
     },
     "extensions.ignoreRecommendations": false,
     "git.autofetch": true,
+    "update.mode": "none",
+    "window.titleBarStyle": "native",
+    "git.autofetch": true,
+    "diffEditor.ignoreTrimWhitespace": false,
     "javascript.updateImportsOnFileMove.enabled": "always",
     "diffEditor.ignoreTrimWhitespace": false,
     "[xml]": {
@@ -186,6 +228,78 @@
     "[python]": {
         "editor.defaultFormatter": "ms-python.python"
     },
-    "python.languageServer": "Microsoft"
-    
+    "editor.multiCursorModifier": "ctrlCmd",
+    "latex-workshop.view.pdf.viewer": "tab",
+    "python.defaultInterpreterPath": "/bin/python",
+    "[latex]": {
+        "editor.wordWrap": "on",
+        "editor.formatOnPaste": false,
+        "editor.suggestSelection": "recentlyUsedByPrefix"
+    },
+    "extensions.ignoreRecommendations": true,
+    "python.terminal.activateEnvironment": false,
+    "files.associations": {
+        "*.rmd": "markdown"
+    },
+    "jupyter.experiments.enabled": false,
+    "r.sessionWatcher": true,
+    "crates.incompatibleDecorator": " ${version}",
+    "crates.compatibleDecorator": " ${version}",
+    "files.exclude": {
+        "**/.classpath": true,
+        "**/.project": true,
+        "**/.settings": true,
+        "**/.factorypath": true
+    },
+    "docker.volumes.sortBy": "CreatedTime",
+    "vs-kubernetes": {
+        "vs-kubernetes.namespace": "",
+        "vs-kubernetes.kubectl-path": "",
+        "vs-kubernetes.helm-path": "",
+        "vs-kubernetes.draft-path": "",
+        "vs-kubernetes.minikube-path": "",
+        "vs-kubernetes.kubectlVersioning": "user-provided",
+        "vs-kubernetes.outputFormat": "yaml",
+        "vs-kubernetes.kubeconfig": "",
+        "vs-kubernetes.knownKubeconfigs": [],
+        "vs-kubernetes.autoCleanupOnDebugTerminate": false,
+        "vs-kubernetes.nodejs-autodetect-remote-root": true,
+        "vs-kubernetes.nodejs-remote-root": "",
+        "vs-kubernetes.nodejs-debug-port": 9229,
+        "checkForMinikubeUpgrade": true,
+        "logsDisplay": "webview",
+        "imageBuildTool": "Docker"
+    },
+    "rust-client.engine": "rust-analyzer",
+    "rust-client.channel": "stable",
+    "[typescript]": {
+        "editor.codeActionsOnSave": {
+            "source.organizeImports": true
+        },
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    },
+    "macros": {
+        "pythonExecSelectionAndCursorDown": [
+            "python.execSelectionInTerminal", 
+            "cursorDown" 
+        ]
+    },
+    "pythonTestExplorer.testFramework": "unittest",
+    "rust-analyzer.procMacro.enable": true,
+    "pretty-formatter.indentSize": 2,
+    "[html]": {
+        "editor.defaultFormatter": "vscode.html-language-features"
+    },
+    "[jsonc]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "window.menuBarVisibility": "toggle",
+    "jupyter.disableJupyterAutoStart": true,
+    "terminal.integrated.tabs.enabled": false,
+    "workbench.editor.enablePreview": false,
+    "python.languageServer": "Pylance",
+    "[json]": {
+        "editor.defaultFormatter": "vscode.json-language-features"
+    },
+    "jupyter.askForKernelRestart": false
 }
