--- a/alacritty.yml
+++ b/alacritty.yml
@@ -3,27 +3,15 @@ env:
   TERM: 'xterm-256color'
 font:
   normal:
-    family: Monaco
-    style: Normal
-
-  bold:
-    family: MonacoB2
-    style: Bold
-
-  italic:
-    family: Monaco
-    style: Italic
-
-  bold_italic:
-    family: MonacoB2
-    style: Bold Italic
-
+    family: Hack
   size: 11
 
 window:
   startup_mode: Maximized
 
-# KDE Breeze (Ported from Konsole)
+# If `true`, bold text is drawn using the bright color variants.
+draw_bold_text_with_bright_colors: true
+
 colors:
   # Default colors
   primary:
@@ -57,15 +45,3 @@ colors:
     cyan: '#16a085'
     white: '#ffffff'
 
-  # Dim colors
-  dim:
-    black: '#31363b'
-    red: '#783228'
-    green: '#17a262'
-    yellow: '#b65619'
-    blue: '#1b668f'
-    magenta: '#614a73'
-    cyan: '#186c60'
-    white: '#63686d'
-
-draw_bold_text_with_bright_colors: true
