--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -192,7 +192,8 @@
         "text",
         "typescript",
         "typescriptreact",
-        "yml"
+        "yml",
+        "tex"
     ],
     "workbench.activityBar.visible": true,
     "liveServer.settings.donotVerifyTags": true,
@@ -295,11 +296,49 @@
     },
     "window.menuBarVisibility": "toggle",
     "jupyter.disableJupyterAutoStart": true,
-    "terminal.integrated.tabs.enabled": false,
     "workbench.editor.enablePreview": false,
     "python.languageServer": "Pylance",
     "[json]": {
         "editor.defaultFormatter": "vscode.json-language-features"
     },
-    "jupyter.askForKernelRestart": false
+    "jupyter.askForKernelRestart": false,
+    "cSpell.enabledLanguageIds": [
+        "asciidoc",
+        "c",
+        "cpp",
+        "csharp",
+        "css",
+        "git-commit",
+        "go",
+        "graphql",
+        "handlebars",
+        "haskell",
+        "html",
+        "jade",
+        "java",
+        "javascript",
+        "javascriptreact",
+        "json",
+        "jsonc",
+        "jupyter",
+        "latex",
+        "less",
+        "markdown",
+        "php",
+        "plaintext",
+        "python",
+        "pug",
+        "restructuredtext",
+        "rust",
+        "scala",
+        "scss",
+        "swift",
+        "text",
+        "typescript",
+        "typescriptreact",
+        "vue",
+        "yaml",
+        "yml",
+        "latex"
+    ]
 }
