--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -111,10 +111,12 @@
     "cSpell.userWords": [
         "ALUMINIUM",
         "Angulartics",
+        "Backoff",
         "Coinbase",
         "Crafing",
         "Cusum",
         "Datasets",
+        "Discretization",
         "Dropdown",
         "EMQX",
         "Geocode",
@@ -125,6 +127,7 @@
         "LSTM",
         "Microservice",
         "Millis",
+        "Modbus",
         "PNPU",
         "Participations",
         "Promisify",
@@ -146,85 +149,54 @@
         "braintree",
         "bson",
         "caems",
-        "denormalize",
-        "blockchain",
-        "braintree",
-        "bson",
-        "Coinbase",
         "configurator",
         "convolutional",
-        "Crafing",
-        "Cusum",
-        "Datasets",
+        "denormalize",
         "derivates",
         "deserialization",
         "dimen",
-        "Discretization",
         "discretize",
         "discretized",
         "downsample",
-        "Dropdown",
         "firestore",
         "gatewaycalms",
         "gdpr",
-        "Geocode",
-        "Geocoding",
         "heatmap",
         "homeserver",
         "hostnames",
-        "Injectable",
         "ipstack",
         "keras",
-        "Kairos",
         "klass",
-        "LEADERBOARD",
         "metatype",
         "microservices",
         "mimetype",
         "mqtt",
-        "nestjs",
-        "numpy",
-        "Microservice",
-        "Millis",
-        "mimetype",
-        "Modbus",
         "multinomial",
         "nestjs",
+        "numpy",
         "overfit",
         "overfitting",
         "parallelization",
-        "Participations",
         "petrolium",
-        "PNPU",
         "postgres",
         "postgresql",
         "preheader",
-        "Promisify",
         "qrcode",
-        "Recaptcha",
         "redetection",
         "repo",
-        "sklearn",
         "serializable",
-        "SMTP",
-        "SORTINGS",
+        "sklearn",
         "striptags",
         "sublocality",
-        "Superlike",
         "suspisusily",
         "tesselate",
         "tesselated",
-        "titlecase",
         "timestore",
-        "TOASTR",
+        "titlecase",
         "topbar",
         "totp",
-        "Transcoder",
-        "Typegoose",
         "unpublish",
         "upserted",
-        "Validators",
-        "Vuforia",
         "webhook",
         "zipcode"
     ],
@@ -333,5 +305,8 @@
         "*.ipynb": "jupyter.notebook.ipynb"
     },
     "workbench.iconTheme": "material-icon-theme",
-    "workbench.startupEditor": "newUntitledFile"
+    "workbench.startupEditor": "newUntitledFile",
+    "[javascript]": {
+        "editor.defaultFormatter": "vscode.typescript-language-features"
+    }
 }
