--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -112,64 +112,48 @@
         "ALUMINIUM",
         "Angulartics",
         "Backoff",
-        "Coinbase",
-        "Crafing",
-        "Cusum",
-        "Datasets",
-        "Discretization",
-        "Dropdown",
-        "EMQX",
-        "Geocode",
-        "Geocoding",
-        "Injectable",
-        "Kairos",
-        "LEADERBOARD",
-        "LSTM",
-        "Microservice",
-        "Millis",
-        "Modbus",
-        "PNPU",
-        "Participations",
-        "Promisify",
-        "RMSE",
-        "Recaptcha",
-        "SMTP",
-        "SORTINGS",
-        "Setpoint",
-        "Superlike",
-        "TOASTR",
-        "Topbar",
-        "Transcoder",
-        "Typegoose",
-        "Validators",
-        "Vuforia",
-        "Waypoints",
-        "Webapp",
         "blockchain",
         "braintree",
         "bson",
         "caems",
+        "Coinbase",
         "configurator",
         "convolutional",
+        "Crafing",
+        "Cusum",
+        "Datasets",
         "denormalize",
         "derivates",
         "deserialization",
         "dimen",
+        "Discretization",
         "discretize",
         "discretized",
         "downsample",
+        "Dropdown",
+        "EMQX",
         "firestore",
         "gatewaycalms",
         "gdpr",
+        "Geocode",
+        "Geocoding",
         "heatmap",
         "homeserver",
         "hostnames",
+        "Injectable",
         "ipstack",
+        "Kairos",
         "keras",
         "klass",
+        "LEADERBOARD",
+        "LSTM",
+        "materializer",
         "metatype",
+        "Microservice",
         "microservices",
+        "Millis",
         "mimetype",
+        "Modbus",
         "mqtt",
         "multinomial",
         "nestjs",
@@ -177,26 +161,43 @@
         "overfit",
         "overfitting",
         "parallelization",
+        "Participations",
         "petrolium",
+        "PNPU",
         "postgres",
         "postgresql",
         "preheader",
+        "Promisify",
         "qrcode",
+        "Recaptcha",
         "redetection",
         "repo",
+        "RMSE",
         "serializable",
+        "Setpoint",
         "sklearn",
+        "SMTP",
+        "SORTINGS",
         "striptags",
         "sublocality",
+        "Superlike",
         "suspisusily",
         "tesselate",
         "tesselated",
         "timestore",
         "titlecase",
+        "TOASTR",
         "topbar",
+        "Topbar",
         "totp",
+        "Transcoder",
+        "Typegoose",
         "unpublish",
         "upserted",
+        "Validators",
+        "Vuforia",
+        "Waypoints",
+        "Webapp",
         "webhook",
         "zipcode"
     ],
@@ -210,9 +211,8 @@
     "editor.insertSpaces": true,
     "editor.minimap.enabled": false,
     "editor.multiCursorModifier": "ctrlCmd",
-    "editor.renderIndentGuides": true,
     "editor.renderLineHighlight": "gutter",
-    "editor.tabSize": 2,
+    "editor.tabSize": 4,
     "explorer.autoReveal": true,
     "explorer.confirmDelete": false,
     "explorer.sortOrder": "type",
@@ -299,7 +299,6 @@
     "window.enableMenuBarMnemonics": false,
     "window.menuBarVisibility": "toggle",
     "window.titleBarStyle": "native",
-    "workbench.activityBar.visible": true,
     "workbench.editor.enablePreview": false,
     "workbench.editorAssociations": {
         "*.ipynb": "jupyter.notebook.ipynb"
@@ -308,5 +307,6 @@
     "workbench.startupEditor": "newUntitledFile",
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
-    }
+    },
+    "editor.guides.indentation": true
 }
