--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -308,5 +308,9 @@
     "[javascript]": {
         "editor.defaultFormatter": "vscode.typescript-language-features"
     },
+    "[css]": {
+        "editor.defaultFormatter": "esbenp.prettier-vscode"
+    },
     "editor.guides.indentation": true
 }
+
