--- a/tmux.conf
+++ b/tmux.conf
@@ -3,4 +3,4 @@ set -g mouse on
 bind-key -n C-NPage next-window
 bind-key -n C-PPage previous-window
 
-set -g status-bg black
+set -g status-bg colour29
