--- a/tmux.conf
+++ b/tmux.conf
@@ -4,3 +4,6 @@ bind-key -n C-NPage next-window
 bind-key -n C-PPage previous-window
 
 set -g status-bg colour29
+
+# set -g default-terminal "xterm-256color"
+set -g default-terminal "screen-256color"
