--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -116,11 +116,13 @@
         "braintree",
         "bson",
         "caems",
+        "capn",
         "Coinbase",
         "configurator",
         "convolutional",
         "Crafing",
         "Cusum",
+        "dataframe",
         "Datasets",
         "denormalize",
         "derivates",
@@ -167,12 +169,15 @@
         "postgres",
         "postgresql",
         "preheader",
+        "preprocess",
         "Promisify",
+        "PRQL",
         "qrcode",
         "Recaptcha",
         "redetection",
         "repo",
         "RMSE",
+        "Roadmap",
         "serializable",
         "Setpoint",
         "sklearn",
@@ -319,4 +324,12 @@
     ],
     "terminal.integrated.enableMultiLinePasteWarning": false,
     "diffEditor.ignoreTrimWhitespace": false,
+    "editor.detectIndentation": false,
+    "[python]": {
+    },
+    "yaml.schemas": {
+        "file:///home/aljaz/.vscode/extensions/atlassian.atlascode-3.0.1/resources/schemas/pipelines-schema.json": "bitbucket-pipelines.yml"
+    },
+    "atlascode.bitbucket.enabled": true,
+    "atlascode.jira.enabled": false,
 }
